# Android-MediaScanner-MediaProvider

./: .gitignore  MediaScannerTecinno4-old.asta  MediaScannerTecinno4.asta  README.md  import-summary.txt  settings.gradle  备份.txt
app/: build.gradle
app/src/androidTest/java/com/czy/jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Scan.cpp  Scan.h  native-lib.cpp  sqlite3.h
app/src/main/java/com/czy/jni/: FileAdapter.java  FolderList.java  ListData.java  MainActivity.java  MediaProvider.java  Menu.java  Video.java
app/src/main/res/anim/: dialog_enter.xml  dialog_out.xml  enter.xml  fate_enter.xml  fate_out.xml  out.xml
app/src/main/res/layout/: activity_main.xml  dialog.xml  folder.xml  listview_item.xml  menu.xml  video_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/czy/jni/: ExampleUnitTest.java
client/: build.gradle
client/src/androidTest/java/com/android/client/: ExampleInstrumentedTest.java
client/src/main/: AndroidManifest.xml
client/src/main/java/com/android/client/: MainActivity.java
client/src/main/res/layout/: activity_main.xml
client/src/test/java/com/android/client/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
